# ThreadFuzzer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  setup.sh
common/Coverage_Instrumentation/: CMakeLists.txt
common/Coverage_Instrumentation/include/: instrumentation.h
common/Coverage_Instrumentation/src/: instrumentation.cpp
common/ZMQ/ZMQ_Client/: CMakeLists.txt
common/ZMQ/ZMQ_Client/include/: zmq_client.h
common/ZMQ/ZMQ_Client/src/: main.cpp  zmq_client.cpp
common/ZMQ/ZMQ_Server/: CMakeLists.txt
common/ZMQ/ZMQ_Server/include/: zmq_server.h
common/ZMQ/ZMQ_Server/src/: main.cpp  zmq_server.cpp
common/shm/: CMakeLists.txt  config.json  fuzz_config.cpp  fuzz_config.h  shared_memory.cpp  shared_memory.h  shm_helper.cpp  shm_helper.h
configs/Fuzzing_Settings/: main_config.json  phys_main_config.json  phys_technical_config.json  technical_config.json  timers_config.json
configs/Fuzzing_Strategies/: len_and_random_config.json  len_fuzzer_config.json  none_config.json  random_config.json  reboot_cnt_config.json  tlv_duplicator_config.json  tlv_duplicator_random_config.json  tlv_inserter_config.json  tlv_mixer_config.json
coverage_log/MTD_none_config_100ms_it_speed_100/: coverage_statistics_2025-07-18_07:57:47
coverage_log/MTD_random_with_blackbox_coverage_k_2_beta_5_100ms_it_speed_100/: coverage_statistics_2025-07-18_16:07:14  coverage_statistics_2025-07-18_19:00:25  coverage_statistics_2025-07-19_00:51:38  coverage_statistics_2025-07-19_03:30:36  coverage_statistics_2025-07-19_06:16:17
coverage_log/MTD_random_with_greybox_coverage_k_2_beta_3_100ms_it_speed_100/: coverage_statistics_2025-07-16_23:19:18  coverage_statistics_2025-07-17_01:04:10  coverage_statistics_2025-07-17_02:44:38  coverage_statistics_2025-07-17_04:23:12  coverage_statistics_2025-07-17_06:04:08
coverage_log/MTD_random_wo_coverage_k_2_100ms_it_speed_100/: coverage_statistics_2025-07-17_07:39:59  coverage_statistics_2025-07-17_09:34:30  coverage_statistics_2025-07-17_11:28:54  coverage_statistics_2025-07-17_13:21:13  coverage_statistics_2025-07-17_16:47:27
coverage_log/MTD_random_wo_coverage_k_2_and_tlv_inserter_100ms_it_speed_100/: coverage_statistics_2025-07-17_18:43:27  coverage_statistics_2025-07-17_20:55:55  coverage_statistics_2025-07-18_09:08:29  coverage_statistics_2025-07-18_11:26:18  coverage_statistics_2025-07-18_13:41:38
coverage_log/none_config_100ms_it_speed_100/: coverage_statistics_2025-07-14_18:03:43
coverage_log/random_with_blackbox_coverage_k_2_beta_1_100ms_it_speed_100_copy/: coverage_statistics_2025-07-14_21:41:56  coverage_statistics_2025-07-14_23:14:38  coverage_statistics_2025-07-15_00:44:15  coverage_statistics_2025-07-15_02:13:27  coverage_statistics_2025-07-15_03:44:45
coverage_log/random_with_blackbox_coverage_k_2_beta_3_100ms_it_speed_100_copy/: coverage_statistics_2025-07-15_05:15:10  coverage_statistics_2025-07-15_06:53:28  coverage_statistics_2025-07-15_08:33:11  coverage_statistics_2025-07-17_23:26:06  coverage_statistics_2025-07-18_01:15:22
coverage_log/random_with_blackbox_coverage_k_2_beta_5_100ms_it_speed_100_copy/: coverage_statistics_2025-07-15_22:36:10  coverage_statistics_2025-07-16_00:07:16  coverage_statistics_2025-07-16_01:36:18  coverage_statistics_2025-07-16_03:09:52  coverage_statistics_2025-07-16_04:44:09
coverage_log/random_with_blackbox_coverage_k_2_beta_7_100ms_it_speed_100_copy/: coverage_statistics_2025-07-16_06:16:45  coverage_statistics_2025-07-16_07:39:27  coverage_statistics_2025-07-18_03:04:55  coverage_statistics_2025-07-18_04:41:46  coverage_statistics_2025-07-18_06:15:33
coverage_log/random_with_greybox_coverage_k_2_beta_1_100ms_it_speed_100/: coverage_statistics_2025-07-11_17:12:47  coverage_statistics_2025-07-16_16:02:20  (+3 more)
include/: FSM.h  coverage_requester.h  coverage_tracker.h  dissector.h  field.h  field_tree.h  helpers.h  mutated_field_num_tracker.h  mutation.h  mutator.h  my_logger.h  packet.h  parsed_field.h  patch.h  reboot_count_fuzzer.h  seed.h  statistics.h
scripts/: change_columns_in_csv.py  coverage_dir_visualizer.py  dec_arr_to_hex.py  hex_arr_to_dec.py  visualize_coverage_results_blackbox.sh  visualize_coverage_results_greybox.sh  visualize_coverage_results_mtd.sh  visualize_coverage_results_tlv_fuzzer.sh
src/: FSM.cpp  coverage_requester.cpp  coverage_tracker.cpp  dissector.cpp  field.cpp  field_tree.cpp  helpers.cpp  main.cpp  mutated_field_num_tracker.cpp  mutation.cpp  mutator.cpp  my_logger.cpp  packet.cpp  parsed_field.cpp  patch.cpp  seed.cpp  statistics.cpp
src/DUT/: alexa.cpp  (+6 more)
(+148 files in other folders)
